Fixed overflow issue

--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -8,6 +8,7 @@ body{
 .mainBody{
     padding: 0!important;
     margin: 0!important;
+    overflow-x: hidden;
 }
 
 .nav-item{
